--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "vscode": "^1.18.0"
     },
     "categories": [
-        "Extension Packs"
+        "Themes"
     ],
     "icon": "images/halion_dark.png",
     "repository": {
